# Canny-Edge-Detector

./: CMakeLists.txt  README.md  edge_detector.cpp  edge_detector.h  main.cpp
src/: edge_detector.cpp  edge_detector.h  main.cpp
